# birdnest-ai

./: .env.example  .gitignore  AGENTS.md  BRANCH_NOTES.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/fix-review/: SKILL.md
evidence/reference/lifecycle/: SOURCES.md  wm_chick_hatchling_egg_01.source.json  wm_chick_multiple_01.expected.json  wm_chick_multiple_01.source.json  wm_chick_week_old_01.expected.json  wm_incubating_01.expected.json  wm_incubating_03.expected.json  wm_mom_protecting_01.source.json  wm_mom_returning_02.source.json
evidence/reference/northern_cardinal/lifecycle/: wm_chick_brood_01.expected.json  wm_chick_brood_01.source.json  wm_chick_hatchling_01.expected.json  wm_chick_hatchling_01.source.json  wm_chick_hatchling_egg_01.expected.json  wm_chick_week_old_01.source.json  wm_chicks_begging_02.expected.json  wm_chicks_begging_02.source.json  wm_chicks_with_mom_01.expected.json  wm_chicks_with_mom_01.source.json  wm_incubating_01.source.json  wm_incubating_02.expected.json  wm_incubating_02.source.json  wm_incubating_03.source.json  wm_mom_protecting_01.expected.json  wm_mom_returning_01.expected.json  wm_mom_returning_01.source.json  wm_mom_returning_02.expected.json
launchd/: com.birdnest.analyzer.plist  com.birdnest.downloader.plist  com.birdnest.monitor.plist  com.cardinalnest.analyzer.plist  com.cardinalnest.downloader.plist  com.cardinalnest.monitor.plist
launchd/generic/: com.birdnest.analyzer.generic.plist  com.birdnest.downloader.generic.plist  com.cardinalnest.analyzer.generic.plist  com.cardinalnest.downloader.generic.plist
species/: __init__.py  _schema.py  american_robin.toml  loader.py
src/birdnest_ai/: __init__.py  __main__.py  analytics.py  analyzer.py  analyzer_loop.py  blink_client.py  cadence.py  config.py  downloader_loop.py  events.py  evidence.py  main.py  notifier.py  predicates.py  prefilter.py  prompts.py  schema.py  spool.py  state.py  verifier.py
src/birdnest_ai/species/: README.md  __init__.py  loader.py
src/birdnest_ai/species/profiles/: american_robin.toml  northern_cardinal.toml
src/birdnest_ai/tools/: analytics_once.py  dryrun.py  lifecycle_backfill.py  lifecycle_regression.py  pause.py  test_discord.py
src/cardinal_nest_monitor/: __init__.py  __main__.py  _image.py  analytics.py  analyzer.py  analyzer_loop.py  blink_client.py  cadence.py  config.py  downloader_loop.py  events.py  evidence.py  main.py  notifier.py  predicates.py  prefilter.py  prompts.py  schema.py  spool.py  state.py  verifier.py
src/cardinal_nest_monitor/species/: README.md  __init__.py  _schema.py  loader.py
src/cardinal_nest_monitor/species/profiles/: northern_cardinal.toml
src/cardinal_nest_monitor/tools/: analytics_once.py  dryrun.py  lifecycle_backfill.py  lifecycle_regression.py  pause.py  test_discord.py
tests/: conftest.py  test_analytics.py  test_behavior_snapshots.py  test_blink_client.py  test_cadence.py  test_config.py  test_cooldown.py  test_events.py  test_image.py  test_lifecycle.py  test_lifecycle_backfill.py  test_notifier.py  test_prompt_rendering.py  test_reference_assets.py  test_schema.py  test_species_profile.py  test_spool_unit.py  test_state_migration.py  test_tool_factories.py  test_verifier.py
tests/integration/: conftest.py  test_absence_cycle.py  test_analytics_and_feed.py  test_backfill_routing.py  test_hang_resilience.py  test_lifecycle_cycle.py  test_replay_2026_04_17.py  test_spool_lifecycle.py  test_threat_scenarios.py  test_verification.py
