[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardinal-nest-monitor"
version = "0.1.0"
description = "Real-time AI nest-risk detection for a backyard Northern Cardinal nest, via Blink Outdoor + Claude + Discord."
requires-python = ">=3.11"
authors = [{ name = "Cardinal Nest Monitor" }]
dependencies = [
    "blinkpy==0.25.5",
    "anthropic>=0.40,<1.0",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "opencv-python-headless>=4.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
cardinal-nest-monitor = "cardinal_nest_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
