[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "birdnest-ai"
version = "0.1.0"
description = "Profile-driven AI nest monitor for open-cup nesting passerines, via Blink Outdoor + Claude + Discord."
requires-python = ">=3.11"
authors = [{ name = "Birdnest AI" }]
dependencies = [
    "blinkpy==0.25.5",
    "anthropic>=0.40,<1.0",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "opencv-python-headless>=4.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
birdnest-ai = "birdnest_ai.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

# Include the shipped species profile TOMLs (and any future data files)
# inside the birdnest_ai package distribution. Without this,
# `pip install` would skip the TOMLs and importlib.resources lookups
# would fail at runtime.
[tool.setuptools.package-data]
"birdnest_ai.species" = ["profiles/*.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
